--- a/audio.html
+++ b/audio.html
@@ -12,7 +12,7 @@
     <h1>Áudio sobre motivação Git</h1>
     <div>
         <audio controls>
-            <source src="audio.mp3">
+            <source src="audio/audio.mp3">
         </audio>
     </div>
     <ul>
