--- a/audio.html
+++ b/audio.html
@@ -11,8 +11,7 @@
 <body class="body2">
     <h1>Áudio sobre motivação Git</h1>
     <div>
-        <audio controls>
-            <source src="audio/audio.mp3">
+        <audio src="audio/explicacao.mp3" controls>
         </audio>
     </div>
     <ul>
