--- a/video.html
+++ b/video.html
@@ -9,9 +9,7 @@
 <body class="body2">
     <h1>Vídeos sobre 5 comandos gits</h1> 
     <div>
-        <video controls>
-            <source src="video/">
-        </video>
+        <video src="video/video.mov" width="640" height="360" controls></video>
 
         
     </div>  
